--- a/mvc5_first/Web.config
+++ b/mvc5_first/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,8 +20,8 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Authentication/Login" />
     </authentication>
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/Error/Index"/>
+    <customErrors mode="Off">
+      <error statusCode="404" redirect="~/Error/Index" />
     </customErrors>
   </system.web>
   <runtime>
@@ -59,11 +59,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="db1" connectionString="data source=qds167160447.my3w.com;Integrated Security=False;Initial Catalog=qds167160447_db;Uid=qds167160447;Pwd=517iloveu;"
-      providerName="System.Data.SqlClient" />
+    <add name="db1" connectionString="data source=qds167160447.my3w.com;Integrated Security=False;Initial Catalog=qds167160447_db;Uid=qds167160447;Pwd=517iloveu;" providerName="System.Data.SqlClient" />
 
-    <add name="PokemonDal" connectionString="data source=qds167160447.my3w.com;Integrated Security=False;Initial Catalog=qds167160447_db;Uid=qds167160447;Pwd=517iloveu;"
-      providerName="System.Data.SqlClient" />
+    <add name="PokemonDal" connectionString="data source=qds167160447.my3w.com;Integrated Security=False;Initial Catalog=qds167160447_db;Uid=qds167160447;Pwd=517iloveu;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   
