--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BusinessLayer\packages.config" />
+  <repository path="..\DataAccessLayer\packages.config" />
   <repository path="..\mvc5_first\packages.config" />
 </repositories>
